# naren-gpt

./: README.md  pyproject.toml  requirements.txt  run.sh
src/: app.py
